Versão final do Projeto Instagram da DIO

--- a/index.html
+++ b/index.html
@@ -2,40 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Instagram</title>
+    <title>Instagram-Dio</title>
 </head>
 <body>
-    <div class="instagram-wrapper">
-        <div class="instagram-phone">
-            <img src="./img/instagram-celular.png" alt="celular">
+    <div class="container-pai">
+        <div class="cel-instagram">
+            <img src="./img/instagram-celular.png" alt="telefone">
         </div>
-        <div class="instagram-continue">
-            <div class="group">
-                <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
-                <div class="profile-photo">
-                    <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
+        <div class="conta">
+            <div class="semelhantes">
+                <div class="logo">
+                    <img src="./img/instagram-logo.png" alt="logo">
                 </div>
-                <a href="#" class="instagram-login">Continue como sprucegabriela</a>
-                <a href="#" class="instagram-logout">Remover conta</a>
+                <div class="perfil">
+                    <img src="./img/Perfil.jpg" alt="perfil">
+                </div>
+
+                <div class="continue">
+                    <a href="#">Continue como gabryelbagaday</a>
+                </div>
+                <div class="remover">
+                    <a href="#">Remover conta</a>
+                </div>
             </div>
-            <div class="group">
-                <p class="not-account">Não é sprucegabriela?</p>
-                <p class="not-account">
-                    <span class="link-blue">Alternar contas</span>
-                    ou
-                    <span class="link-blue">Inscreva-se</span>
+            <div class="semelhantes">
+                <p>Não é gabryelbagaday?</p>
+                <p>
+                    <span>
+                        <a href="#" class="links">Alternar contas</a>
+                    </span> ou 
+                    <span>
+                        <a href="#" class="links">Inscreva-se</a>
+                    </span>
                 </p>
             </div>
-            <div class="get-the-app">
-                <p class="get-app">Baixe o aplicativo</p>
-                <div class="download">
-                    <a href="#" class="app-download"></a>
-                    <a href="#" class="app-download"></a>
+            <div class="download">
+                <p>
+                    <a href="#" class="baixar">  Obtenha o aplicativo.</a>
+                </p>
+                <div class="links-app">
+                    <a href="#" class="app-download">
+                        <img src="./img/apple-button.png">
+                    </a>
+                    <a href="#" class="app-download">
+                        <img src="./img/googleplay-button.png">
+                    </a>
                 </div>
             </div>
-        </div>
-    </div>
+        </div>    
+</div> 
 </body>
 </html>
